--- a/install
+++ b/install
@@ -91,8 +91,9 @@ TMP_DIR=$(mktemp -d 2>/dev/null || mktemp -d -t 'airbox-install.XXXXXXXXXX')
 echo "Change to temporary directory ${TMP_DIR}"
 cd "$TMP_DIR"
 
-echo "Downloading airbox $VERSION"
+echo "Downloading AirBox Agent $VERSION"
 LINK="https://github.com/${GH_REPO}/releases/download/${VERSION}/${GH_REPO_BIN}"
+echo "Downloading $LINK"
 
 curl --silent --location --max-time "${TIMEOUT}" "${LINK}" | tar zxf - || {
     echo "Error downloading"
