--- a/install
+++ b/install
@@ -4,19 +4,20 @@ GH_REPO="airbox-build/agent"
 TIMEOUT=90
 LOG_PATH="/var/log/airbox"
 INTERVAL=60
+BINARY_PATH="/usr/local/bin"
+SERVICE_NAME="airbox-agent"
+BINARY_DIRECTORY=""
 
 # Parse command line arguments
 while [[ "$#" -gt 0 ]]; do
   case $1 in
     --logpath)
       LOG_PATH="$2"
-      shift
-      shift
+      shift 2
       ;;
     --interval)
       INTERVAL="$2"
-      shift
-      shift
+      shift 2
       ;;
     *)
       echo "Unknown option: $1"
@@ -25,165 +26,157 @@ while [[ "$#" -gt 0 ]]; do
   esac
 done
 
-# Determine the operating system
-OS=$(uname -s)
-BINARY_PATH="/usr/local/bin"
-BINARY_DIRECTORY=""
+# Detect the OS and architecture
+OS=$(uname -s | tr '[:upper:]' '[:lower:]')
+ARCH=$(uname -m)
 
-# Set the default binary path and directory based on the operating system
-if [ "${OS}" = "Linux" ]; then
-    BINARY_DIRECTORY="/opt/airbox"
-elif [ "${OS}" = "Darwin" ]; then
-    BINARY_DIRECTORY="/usr/local/airbox"
-else
-    echo "Unsupported operating system: ${OS}"
-    exit 1
-fi
+case "$ARCH" in
+  x86_64 | amd64) ARCH="amd64" ;;
+  i?86 | x86) ARCH="386" ;;
+  aarch64 | arm64) ARCH="arm64" ;;
+  *) echo "Unsupported architecture: ${ARCH}"; exit 2 ;;
+esac
+
+case "$OS" in
+  linux) BINARY_DIRECTORY="/opt/airbox" ;;
+  darwin) BINARY_DIRECTORY="/usr/local/airbox" ;;
+  *) echo "Unsupported OS: ${OS}"; exit 1 ;;
+esac
 
 mkdir -p "${BINARY_DIRECTORY}" || exit 2
 mkdir -p "${LOG_PATH}" || exit 2
 
-# Get the current logged-in user
-USERNAME=$USER
+# Detect if running inside a container
+is_container() {
+  if [ -f /.dockerenv ] || [ -f /run/.containerenv ]; then
+    return 0
+  elif grep -q -i "container" /proc/1/cgroup 2>/dev/null; then
+    return 0
+  else
+    return 1
+  fi
+}
 
-set -e
-
-VERSION=$(curl --silent --location --max-time "${TIMEOUT}" "https://api.github.com/repos/${GH_REPO}/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
-if [ ! "$VERSION" ]; then
-    echo -ne "\nThere was an error trying to check what is the latest version of AirBox Agent.\nPlease try again later.\n"
-    exit 1
+# Fetch the latest version of the agent
+VERSION=$(curl --silent --location --max-time "${TIMEOUT}" \
+  "https://api.github.com/repos/${GH_REPO}/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
+if [ -z "$VERSION" ]; then
+  echo "Error fetching the latest version. Please try again later."
+  exit 1
 fi
 
-# detect the platform
-OS="$(uname)"
-case $OS in
-Linux)
-    OS='linux'
-    ;;
-Darwin)
-    OS='darwin'
-    ;;
-*)
-    echo 'OS not supported'
-    exit 2
-    ;;
-esac
-
-# detect the arch
-OS_type="$(uname -m)"
-case "$OS_type" in
-x86_64 | amd64)
-    OS_type='amd64'
-    ;;
-i?86 | x86)
-    OS_type='386'
-    ;;
-aarch64 | arm64)
-    OS_type='arm64'
-    ;;
-*)
-    echo 'OS type not supported'
-    exit 2
-    ;;
-esac
-
-GH_REPO_BIN="agent-${VERSION}-${OS}-${OS_type}.tar.gz"
-
-#create tmp directory and move to it with macOS compatibility fallback
+# Download the agent binary
+GH_REPO_BIN="agent-${VERSION}-${OS}-${ARCH}.tar.gz"
 TMP_DIR=$(mktemp -d 2>/dev/null || mktemp -d -t 'airbox-install.XXXXXXXXXX')
-echo "Change to temporary directory ${TMP_DIR}"
+echo "Using temporary directory: ${TMP_DIR}"
 cd "$TMP_DIR"
 
-echo "Downloading AirBox Agent $VERSION"
-LINK="https://github.com/${GH_REPO}/releases/download/${VERSION}/${GH_REPO_BIN}"
-echo "Downloading $LINK"
-
-curl --silent --location --max-time "${TIMEOUT}" "${LINK}" | tar zxf - || {
-    echo "Error downloading"
+echo "Downloading AirBox Agent $VERSION..."
+curl --silent --location --max-time "${TIMEOUT}" \
+  "https://github.com/${GH_REPO}/releases/download/${VERSION}/${GH_REPO_BIN}" | tar zxf - || {
+    echo "Error downloading binary."
     exit 2
 }
 
-mv agent "${BINARY_PATH}/airbox-agent" || exit 2
-chmod 755 "${BINARY_PATH}/airbox-agent" || exit 2
-case "$OS" in
-'linux')
-    chown root:root "${BINARY_PATH}/airbox-agent" || exit 2
-    ;;
-'freebsd' | 'openbsd' | 'netbsd' | 'darwin')
-    chown root:wheel "${BINARY_PATH}/airbox-agent" || exit 2
-    ;;
-*)
-    echo 'OS not supported'
-    exit 2
-    ;;
-esac
+# Install the agent binary
+mv agent "${BINARY_PATH}/${SERVICE_NAME}" || exit 2
+chmod 755 "${BINARY_PATH}/${SERVICE_NAME}"
 
-# Check if the airbox-agent exists in the /usr/local/bin directory
-if [ ! -f "${BINARY_PATH}/airbox-agent" ]; then
-    echo "Installation unsuccessful: AirBox Agent is not found in ${BINARY_PATH}"
-    exit 2
+# Verify the installation
+if [ ! -f "${BINARY_PATH}/${SERVICE_NAME}" ]; then
+  echo "Installation unsuccessful: AirBox Agent not found."
+  exit 2
 fi
 
-rm -rf "${TMP_DIR}"
-echo "Installed successfully to ${BINARY_PATH}/airbox-agent"
+rm -rf "$TMP_DIR"
+echo "Installed successfully to ${BINARY_PATH}/${SERVICE_NAME}."
 
-# Create a Systemd unit file
-SERVICE_DIRECTORY="/etc/systemd/system/airbox-agent.service"
-
-if [[ "$OS" == "darwin" ]]; then
-    # macOS
-    PLIST_PATH="/Library/LaunchDaemons/airbox-agent.plist"
-    SERVICE_DIRECTORY="/Library/LaunchDaemons/airbox-agent.plist"
-
-    # Create the plist file
-    sudo tee "$PLIST_PATH" >/dev/null <<EOF
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-    <key>Label</key>
-    <string>com.airbox.agent</string>
-    <key>Description</key>
-    <string>AirBox Agent Service</string>
-    <key>ProgramArguments</key>
-    <array>
-        <string>${BINARY_PATH}/airbox-agent</string>
-        <string>--logpath=${LOG_PATH}</string>
-        <string>--interval=${INTERVAL}</string>
-    </array>
-    <key>WorkingDirectory</key>
-    <string>${BINARY_DIRECTORY}</string>
-    <key>KeepAlive</key>
-    <true/>
-    <key>RunAtLoad</key>
-    <true/>
-    <key>UserName</key>
-    <string>${USERNAME}</string>
-</dict>
-</plist>
+# Function to create Supervisor config
+create_supervisor_config() {
+  echo "Setting up Supervisor..."
+  sudo tee /etc/supervisor/conf.d/${SERVICE_NAME}.conf >/dev/null <<EOF
+[program:${SERVICE_NAME}]
+command=${BINARY_PATH}/${SERVICE_NAME} --logpath=${LOG_PATH} --interval=${INTERVAL}
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/${SERVICE_NAME}.err.log
+stdout_logfile=/var/log/${SERVICE_NAME}.out.log
 EOF
-    echo "Run sudo launchctl load ${PLIST_PATH} to load the service on startup."
-else
+  sudo supervisorctl reread
+  sudo supervisorctl update
+  sudo supervisorctl start ${SERVICE_NAME}
+}
 
-    sudo tee "${SERVICE_DIRECTORY}" >/dev/null <<EOF
+# Function to create systemd service
+create_systemd_service() {
+  echo "Setting up systemd service..."
+  sudo tee /etc/systemd/system/${SERVICE_NAME}.service >/dev/null <<EOF
 [Unit]
-Description=AirBox Service
+Description=AirBox Agent Service
 After=network.target
 
 [Service]
-ExecStart=${BINARY_PATH}/airbox-agent --logpath=${LOG_PATH} --interval=${INTERVAL}
+ExecStart=${BINARY_PATH}/${SERVICE_NAME} --logpath=${LOG_PATH} --interval=${INTERVAL}
 WorkingDirectory=${BINARY_DIRECTORY}
 Restart=always
-User=${USERNAME}
+User=${USER}
 
 [Install]
 WantedBy=multi-user.target
 EOF
+  sudo systemctl enable ${SERVICE_NAME}.service
+  sudo systemctl start ${SERVICE_NAME}.service
+}
 
-    # Enable and start the service
-    echo "Run sudo systemctl enable airbox.service to enable airbox to start on startup."
-    echo "Run sudo systemctl start airbox.service to start the service."
+# Function to create macOS launchd plist
+create_launchd_service() {
+  echo "Setting up macOS launchd service..."
+  PLIST_PATH="/Library/LaunchDaemons/com.airbox.agent.plist"
+  sudo tee "$PLIST_PATH" >/dev/null <<EOF
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+  <key>Label</key>
+  <string>com.airbox.agent</string>
+  <key>ProgramArguments</key>
+  <array>
+    <string>${BINARY_PATH}/${SERVICE_NAME}</string>
+    <string>--logpath=${LOG_PATH}</string>
+    <string>--interval=${INTERVAL}</string>
+  </array>
+  <key>WorkingDirectory</key>
+  <string>${BINARY_DIRECTORY}</string>
+  <key>KeepAlive</key>
+  <true/>
+  <key>RunAtLoad</key>
+  <true/>
+</dict>
+</plist>
+EOF
+  sudo launchctl load "$PLIST_PATH"
+}
 
+# Install the service based on the environment
+if is_container; then
+  echo "Running inside a container. Using Supervisor or manual execution."
+  if command -v supervisorctl >/dev/null 2>&1; then
+    create_supervisor_config
+  else
+    echo "Supervisor not available. Running manually in the background."
+    nohup "${BINARY_PATH}/${SERVICE_NAME}" --logpath="${LOG_PATH}" --interval="${INTERVAL}" &
+  fi
+elif [ "$OS" == "linux" ]; then
+  if command -v systemctl >/dev/null 2>&1; then
+    create_systemd_service
+  else
+    create_supervisor_config
+  fi
+elif [ "$OS" == "darwin" ]; then
+  create_launchd_service
+else
+  echo "Unsupported environment. Run manually:"
+  "${BINARY_PATH}/${SERVICE_NAME}" --logpath="${LOG_PATH}" --interval="${INTERVAL}" &
 fi
 
-echo "AirBox service has been installed."
+echo "AirBox Agent service setup complete."
